added section reveal

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -122,7 +122,7 @@ p {
 }
 
 ////////////////////////////////////////////////////////
-/* Container */
+/* Container & Sections */
 ////////////////////////////////////////////////////////
 
 .container {
@@ -130,6 +130,15 @@ p {
   max-width: 1000px;
   margin: 0 auto;
   padding: 0 2em;
+}
+
+section {
+  transition: transform 1s, opacity 1s;
+}
+
+.section--hidden {
+  opacity: 0;
+  transform: translateY(8rem);
 }
 
 ////////////////////////////////////////////////////////
